version 7 ( done CRUD saleImage, salePpost, but not realtime)