@@ -4,6 +4,7 @@ package com.example.demo.exception;
 import com.example.demo.dto.request.ApiResponse;
 import jakarta.validation.ConstraintViolation;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -13,31 +14,37 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import java.util.Map;
 import java.util.Objects;
 
+
 @Slf4j
 @ControllerAdvice
-public class GlobalExceptionHandler  {
+public class GlobalExceptionHandler {
     private static final String MIN_ATTRIBUTE = "min";
-    Map<String, Object> attributes = null;
+
+    // SỬA LỖI 1: Thay đổi tham số từ RuntimeException thành Exception để khớp với @ExceptionHandler
+    // và trả về mã lỗi 500
     @ExceptionHandler(value = Exception.class)
-    ResponseEntity<ApiResponse> handleRuntimeException(RuntimeException ex) {
+    ResponseEntity<ApiResponse> handleException(Exception ex) {
+        log.error("Unhandled Exception: ", ex); // Thêm log để dễ debug
         ApiResponse response = new ApiResponse();
         response.setCode(ErrorCode.UNKNOWN_ERROR.getCode());
         response.setMessage(ErrorCode.UNKNOWN_ERROR.getMessage());
-        return ResponseEntity.badRequest().body(response);
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
     }
+
     @ExceptionHandler(value = MethodArgumentNotValidException.class)
     ResponseEntity<ApiResponse> handleMethodArgumentNotValidException(MethodArgumentNotValidException ex) {
-        String enumKey = ex.getFieldError().getDefaultMessage();
-        ErrorCode errorCode = ErrorCode.INVALID_TOKEN;
-        try{
-         errorCode = ErrorCode.valueOf(enumKey);
-         var constrainViolation = ex.getBindingResult()
-                 .getAllErrors()
-                 .getFirst().unwrap(ConstraintViolation.class);
-          attributes = constrainViolation.getConstraintDescriptor().getAttributes();
-         log.info("Constraint violation attribute: {}", attributes.toString());
-        }catch (IllegalArgumentException e) {
-
+        String enumKey = Objects.requireNonNull(ex.getFieldError()).getDefaultMessage();
+        ErrorCode errorCode = ErrorCode.INVALID_TOKEN; // Giữ nguyên mã lỗi mặc định của bạn
+        Map<String, Object> attributes = null; // SỬA LỖI 2: Chuyển 'attributes' thành biến cục bộ
+        try {
+            errorCode = ErrorCode.valueOf(enumKey);
+            var constrainViolation = ex.getBindingResult()
+                    .getAllErrors()
+                    .get(0).unwrap(ConstraintViolation.class);
+            attributes = constrainViolation.getConstraintDescriptor().getAttributes();
+            log.info("Constraint violation attribute: {}", attributes.toString());
+        } catch (Exception e) {
+            log.error("Could not find ErrorCode for key: {}", enumKey, e);
         }
 
         ApiResponse response = new ApiResponse();
@@ -47,6 +54,7 @@ public class GlobalExceptionHandler  {
                 errorCode.getMessage());
         return ResponseEntity.badRequest().body(response);
     }
+
     @ExceptionHandler(value = AppException.class)
     ResponseEntity<ApiResponse> handleAppException(AppException ex) {
         ErrorCode errorCode = ex.getErrorCode();
@@ -55,9 +63,10 @@ public class GlobalExceptionHandler  {
         response.setMessage(errorCode.getMessage());
         return ResponseEntity.status(errorCode.getStatuscode()).body(response);
     }
+
     @ExceptionHandler(value = AccessDeniedException.class)
     ResponseEntity<ApiResponse> handleAccessDeniedException(AccessDeniedException ex) {
-         ErrorCode errorCode = ErrorCode.UNAUTHORIZED;
+        ErrorCode errorCode = ErrorCode.UNAUTHORIZED;
         return ResponseEntity.status(errorCode.getStatuscode()).body(
                 ApiResponse.builder()
                         .code(errorCode.getCode())
@@ -65,12 +74,13 @@ public class GlobalExceptionHandler  {
                         .build()
         );
     }
-   private String mapAttribute(String message, Map<String, Object> attributes) {
-        String minValue = String.valueOf( attributes.get(MIN_ATTRIBUTE));
-        return message.replace("{" + MIN_ATTRIBUTE + "}", minValue);
 
+    private String mapAttribute(String message, Map<String, Object> attributes) {
+        if (attributes.containsKey(MIN_ATTRIBUTE)) {
+            String minValue = String.valueOf(attributes.get(MIN_ATTRIBUTE));
+            return message.replace("{" + MIN_ATTRIBUTE + "}", minValue);
+        }
+        return message;
     }
-
-
-
 }
+
